--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <script>
         document.getElementById("goodnightButton").addEventListener("click", function() {
             // Redirige a index.html, el cual a su vez te redirigirá a la página final
-            window.location.href = "index.html";
+            window.location.href = "ternura.html";
         });
     </script>
 
